<resources>
	<string name="app_name">MEMOQUE</string>
	<string name="splash_title">BOBS</string>
	<string name="permission_request_title">Permission Request</string>
	<string name="permission_request_content">Storage privileges are required to run this app.</string>
	<string name="permission_request_error_title">Permission Request Error</string>
	<string name="permission_request_error_content">If you do not want to allow permission requests, you cannot run the app. Allow me to request authority.</string>
	<string name="permission_request_error_positive">OK</string>
	<string name="title_touchthescreen">Touch the screen</string>
	<string name="main_backpressed">Press the Back button again to exit</string>

	<string-array name="tabnames">
		<item name="main_tab">MEMO</item>
		<item name="search_tab">SEARCH</item>
	</string-array>

	<string name="memo_add_button">MEMO ADD</string>
	<string name="memo_alram_on_button">ALRAM ON</string>
	<string name="memo_alram_off_button">ALRAM OFF</string>
	<string name="memo_help_button">HELP</string>
	<string name="memo_help_dialog_title">Please read it!</string>
	<string name="memo_help_dialog_content">1.Up to 500 memos can be stored.\n\n2.Memo titles can be up to 20 characters long and memos can be up to 1000 characters long.\n\n3. When running app sleep and app optimization, the alarm might not turn on normally. Please exit after running the app again.\n\n4. To back up the memoList, simply back up the memoque.db file on \"/memoque/databases/\". If you want to move to another smartphone, simply put the file in the path above.</string>
	<string name="memo_add_button_warning">Adding memo is only possible from the Memo tab.</string>
	<string name="memo_alram_on_message">The alarm is on.</string>
	<string name="memo_alram_off_message">The alarm is off.</string>

	<string name="search_button">Search</string>
	<string name="search_calendar_button">Calendar Button</string>
	<string name="search_empty_text">Please enter the text you want to search for.</string>
	<string name="search_disable_memo">There\'s no matching memos.</string>

	<string name="detail_memo_title_add">ADD MEMO</string>
	<string name="detail_memo_title_edit">EDIT MEMO</string>

	<string name="detail_memo_menu_select_alarm_date">SELECT ALARM DATE</string>
	<string name="detail_memo_menu_save">SAVE</string>
	<string name="detail_memo_menu_delete">DELETE</string>
	<string name="detail_memo_menu_reset">RESET</string>
	<string name="detail_memo_menu_exit">EXIT</string>
	<string name="detail_memo_menu_save_max_memos">The current number of memos is $1%d, which is the maximum, and cannot be saved anymore. Exit the Add Memo window.</string>
	<string name="detail_memo_menu_save_empty_title">Please enter a title.</string>
	<string name="detail_memo_menu_save_empty_content">Please enter a contents.</string>
	<string name="detail_memo_menu_remove_warning">Unable to delete memo.</string>

	<string name="detail_memo_content_title">Title</string>
	<string name="detail_memo_content_alarmdate">AlarmDate</string>
	<string name="detail_memo_content_alarmdate_desc">Select the upper right calendar button and select a time. If not selected, it is saved with the above time.</string>
	<string name="detail_memo_content_hint">Content</string>

	<string name="select_alarmtime_positive">Decision</string>
	<string name="select_alarmtime_negative">Cancel</string>
	<string name="select_alarmtime_warning_not_select_date">Please select a date first.</string>
	<string name="select_alarmtime_decision">Do you want to set the alarm to the above time?</string>

	<string name="notification_title">alarm arrival</string>

	<string name="admob_unit_id">ca-app-pub-9969081594277709/5219389471</string>
</resources>
